# 3DViewer

./: .gitignore  CMakeLists.txt  README.md
src/: Doxyfile  Makefile  main.cpp
src/engine/: controller.h  parser.cpp  parser.h  renderer.cpp  renderer.h  settingsEditor.h
src/engine/camera_controller/: cameraController.cpp  cameraController.h
src/misc/: datatype.h  settings.conf
src/shaders/: fragment.frag  geometry.glsl  points.frag  vertices.vert
src/tests/: CMakeLists.txt  engine_tests.cpp  parser_tests.cpp
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsWidget.cpp  settingsWidget.h  settingsWidget.ui
